Closed
Bug 1426996
Opened 3 years ago
Closed 3 years ago
Crash in OOM | large | NS_ABORT_OOM | NS_EscapeAndFilterURL
Categories
(Core :: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox57 | --- | wontfix |
firefox58 | --- | fixed |
firefox59 | --- | fixed |
People
(Reporter: philipp, Assigned: valentin)
References
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
kershaw
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is report bp-2ce598b4-6c3e-403c-b90f-0bf700171223. ============================================================= Top 10 frames of crashing thread: 0 xul.dll NS_ABORT_OOM xpcom/base/nsDebugImpl.cpp:620 1 xul.dll NS_EscapeAndFilterURL xpcom/io/nsEscape.cpp:449 2 xul.dll net_FilterAndEscapeURI netwerk/base/nsURLHelper.cpp:649 3 xul.dll mozilla::net::nsSimpleURI::SetSpec netwerk/base/nsSimpleURI.cpp:301 4 xul.dll nsDataHandler::NewURI netwerk/protocol/data/nsDataHandler.cpp:100 5 xul.dll mozilla::net::nsIOService::NewURI netwerk/base/nsIOService.cpp:697 6 xul.dll NS_NewURI netwerk/base/nsNetUtil.cpp:1787 7 xul.dll mozilla::css::URLValueData::GetURI layout/style/nsCSSValue.cpp:2950 8 xul.dll mozilla::css::URLValueData::HasRef layout/style/nsCSSValue.cpp:2984 9 xul.dll nsStyleImageRequest::Resolve layout/style/nsStyleStruct.cpp:2200 ============================================================= crash reports with this signature are newly showing up on fennec in version 57 & on firefox desktop since 58 (same pattern as in bug 1418810).
Comment 1•3 years ago
|
||
Hi Valentin, Could you take this bug? Since you've already dealt with this before in bug 1418810. Thanks.
Flags: needinfo?(valentin.gosu)
Priority: -- → P2
Whiteboard: [necko-triaged]
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → valentin.gosu
Flags: needinfo?(valentin.gosu)
Comment hidden (mozreview-request) |
Assignee | ||
Updated•3 years ago
|
Attachment #8938897 -
Flags: review?(kechang)
Comment 3•3 years ago
|
||
mozreview-review |
Comment on attachment 8938897 [details] Bug 1426996 - Use fallible assign in NS_EscapeAndFilterURL https://reviewboard.mozilla.org/r/209368/#review215196 Thanks!
Attachment #8938897 -
Flags: review?(kechang) → review+
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8af6e9af7605 Use fallible assign in NS_EscapeAndFilterURL r=kershaw
Comment 5•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/8af6e9af7605
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment 6•3 years ago
|
||
Comment on attachment 8938897 [details] Bug 1426996 - Use fallible assign in NS_EscapeAndFilterURL Approval Request Comment [Feature/Bug causing the regression]: Unknown. [User impact if declined]: OOM [Is this code covered by automated tests?]: No [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: No. It is difficult to reproduce by manual testing. [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: No. [Why is the change risky/not risky?]: It just makes an allocation fallible, and returns an error otherwise. [String changes made/needed]: none.
Attachment #8938897 -
Flags: approval-mozilla-beta?
Comment 7•3 years ago
|
||
Comment on attachment 8938897 [details] Bug 1426996 - Use fallible assign in NS_EscapeAndFilterURL The signature is showing from 58.0b9. Take this to fix 58. Beta58+.
Attachment #8938897 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•3 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/5a76bef07139
Comment 9•3 years ago
|
||
Too late for 57
Updated•3 years ago
|
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•