Bug 1426996 - Use fallible assign in NS_EscapeAndFilterURL r=kershaw a=gchang

MozReview-Commit-ID: EKVeQb3cboU